--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo-server-sdk": "3.6.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "ioredis": "4.19.2",
     "jade": "~1.11.0",
     "moment": "2.29.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "redis": "3.0.2"
   }
 }
